# drawing_robot_v2

./: .gitattributes  .gitignore  0_alite.csv  0_u96_cpu.csv  1_alite.csv  1_u96_cpu.csv  2_alite.csv  2_u96_cpu.csv  3_alite.csv  3_u96_cpu.csv  4_alite.csv  4_u96_cpu.csv  5_alite.csv  5_u96_cpu.csv  6_alite.csv  6_u96_cpu.csv  7_alite.csv  7_u96_cpu.csv  8_alite.csv  8_u96_cpu.csv  9_alite.csv  9_u96_cpu.csv  data_processing.mlx  laptop_cpu.csv
install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/launch/: motor_controller.launch.py
install/usb_cam/share/usb_cam/config/: camera_info.yaml  params_2.yaml
install/usb_cam/share/usb_cam/launch/: __init__.py
scripts/: Ultra96_XPE_2018_2_2-I-temp-reduced-DSPs.xlsm  data_processing.m  fpga.csv  full_rebuild.sh  u_96_cpu.csv  workspace_analysis.m
src/camera/usb_cam/: CMakeLists.txt
src/camera/usb_cam/src/ros1/: usb_cam_node.cpp
src/camera/usb_cam/src/ros2/: usb_cam_node.cpp
src/camera_receiver/log/: latest_build
src/camera_transmitter/install/usb_cam/share/usb_cam/config/: params_1.yaml
src/camera_transmitter/install/usb_cam/share/usb_cam/launch/: camera.launch.py  camera_config.py
src/camera_transmitter/log/: latest_build
src/camera_transmitter/usb_cam/launch/: camera.launch.py
src/motor/drawer/: CMakeLists.txt  package.xml  usage.txt
src/motor/drawer/src/: number_drawer.cpp
src/motor/drawer/srv/: Draw.srv  Number.srv
src/motor/dynamixel_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/motor/dynamixel_controller/launch/: motor_controller.launch.py
src/motor/dynamixel_controller/src/: read_write_node.cpp
src/motor/dynamixel_sdk_custom_interfaces/: CMakeLists.txt
src/motor/dynamixel_sdk_custom_interfaces/msg/: SetPositionMultiple.msg
src/motor/dynamixel_sdk_examples/: CMakeLists.txt
src/motor_controller/dynamixel_sdk_examples/src/: read_write_node.cpp
src/motor_planner/drawer/: usage.txt
src/motor_planner/drawer/src/: number_drawer.cpp
src/neural_network/Vitis_HLS/: .analytics  matmul.cpp  matmul.hpp  matmul_tb.cpp
src/neural_network/Vitis_HLS/.metadata/: version.ini
src/neural_network/Vitis_HLS/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
src/neural_network/Vitis_HLS/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
src/neural_network/Vitis_HLS/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
src/neural_network/Vitis_HLS/.metadata/.plugins/org.eclipse.tcf.debug/: peers.ini
src/neural_network/Vitis_HLS/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
src/neural_network/Vitis_HLS/neural_network_hls/: .cproject  .project  hls.app
src/neural_network/Vitis_HLS/neural_network_hls/.apc/: autopilot.apfmapping
src/neural_network/Vitis_HLS/neural_network_hls/solution1/: script.tcl  solution1.aps  solution1_data.json
src/neural_network/Vitis_HLS/neural_network_hls/solution1/.autopilot/: .automg_exit  .autopilot_exit
src/neural_network/Vitis_HLS/neural_network_hls/solution1/.autopilot/db/: .message_csim.xml  .message_impl.xml  .message_syn.xml  __ctype_info__.xml  a.g  a.g.0.bc  a.g.1.bc  a.g.2.bc  a.g.2.prechk.bc  a.g.bc  a.g.ld.0.bc  a.g.ld.1.lower.bc  a.g.ld.3.fpc.bc  a.g.ld.4.m2.bc  a.g.ld.5.gdce.bc  a.o.1.tmp.bc  a.o.2.bc  a.o.3.bc  apatb_nn_inference.cpp  apatb_nn_inference_ir.ll  autopilot.rtl.models.txt  bugpoint.sh  burst.xml  global.setting.tcl  hls_design_meta.cpp  hls_design_meta.h  hw_act_layer1.adb  hw_act_layer1.aemf  hw_act_layer1.bind.adb  hw_act_layer1.bind.adb.xml  hw_act_layer1.sched.adb  hw_act_layer1.sched.adb.xml  hw_act_layer1.tbgen.tcl  hw_act_layer1.verbose.bind.rpt  hw_act_layer1.verbose.rpt  hw_act_layer1.verbose.rpt.xml  hw_act_layer1.verbose.sched.rpt  hw_act_layer1.verbose.sched.rpt.xml  hwmm_layer1.compgen.tcl  hwmm_layer1.tbgen.tcl  (+98 more)
src/neural_network/Vitis_HLS/neural_network_hls/solution1/.debug/: nn_inference.protoinst
src/neural_network/Vitis_HLS/neural_network_hls/solution1/impl/ip/: auxiliary.xml  component.xml  nn_inference_info.xml  run_ippack.tcl  sysgen_info.xml  tmp.xpr  vivado.jou
src/neural_network/Vitis_HLS/neural_network_hls/solution1/impl/verilog/: nn_inference.v  nn_inference_fcmp_32ns_32ns_1_2_no_dsp_1.v  nn_inference_fmul_32ns_32ns_32_4_max_dsp_1.v  nn_inference_hwmm_layer1.v  nn_inference_hwmm_layer3.v  nn_inference_l2_mm.v  nn_inference_l3_mm.v  nn_inference_layer1_weights.v  nn_inference_temp_output2_0.v
src/neural_network/Vitis_HLS/neural_network_hls/solution1/impl/vhdl/: nn_inference.vhd  nn_inference_fadd_32ns_32ns_32_5_full_dsp_1.vhd  nn_inference_fcmp_32ns_32ns_1_2_no_dsp_1.vhd  nn_inference_fmul_32ns_32ns_32_4_max_dsp_1.vhd  nn_inference_hwmm_layer2.vhd  nn_inference_layer1_weights.vhd
src/neural_network/Vitis_HLS/neural_network_hls/solution1/syn/report/: csynth.rpt  csynth.xml  hw_act_layer1_csynth.rpt  hw_act_layer1_csynth.xml  hwmm_layer1_csynth.rpt  hwmm_layer1_csynth.xml  hwmm_layer2_csynth.rpt  (+13 more)
src/neural_network/nn_interface/: CMakeLists.txt  download.txt  package.xml
src/neural_network/nn_interface/drivers/nn_inference_v1_0/src/: xnn_inference.h
src/neural_network/nn_interface/include/: nn_analyzer.hpp
src/neural_network/nn_interface/src/: nn_analyzer.cpp  nn_analyzer_cpu.cpp
src/neural_network/nn_interfacer/: CMakeLists.txt  package.xml
src/neural_network/nn_interfacer/src/: nn_analyzer.cpp
(+40 files in other folders)
