<?xml version="1.0"?>
<package format="3">
  <name>nn_interface</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="frydensberg.peter@gmail.com">peterparker</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>drawer</depend> <!-- Declare dependency on drawer -->
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
